--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BaseProject</string>
+    <string name="msg_quit">Pressing the "back" button ends.</string>
+
+    <string name="cancel">"Cancel"</string>
 </resources>
